Combine account columns into useful groupings.

--- a/00_programs.qmd
+++ b/00_programs.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Script 00: Programs"
+title: "Programs"
 format: html
 ---
 
@@ -46,6 +46,7 @@ programs_missing <- tribble(
   ~program_parent_level_2, ~program_parent_level_2_description, ~program,
   "ED0004", "CENTRAL SERVICES", "400078",
   "ED0022", "SCHOOL SUPPORT SERVICES", "400234",
+  "ED0022", "SCHOOL SUPPORT SERVICES", "600181",
 )
 ```
 
