--- a/04_clean_485.qmd
+++ b/04_clean_485.qmd
@@ -101,6 +101,7 @@ categorization_override <-
     col_types = "text"
   ) %>%
   clean_names() %>%
+  filter(!is.na(categorization_override)) %>%
   distinct(costcenter, position, categorization_override)
 
 pfr_start <-
@@ -366,8 +367,8 @@ Unique combinations
 
 ```{r}
 categorization_override %>%
-  distinct(position, costcenter, categorization_override) %>%
-  count(position, costcenter, sort = T)
+  distinct(costcenter, position, categorization_override) %>%
+  count(costcenter, position, sort = T)
 ```
 
 ```{r}
@@ -413,23 +414,24 @@ data_485_aug %>%
   filter(n > 1)
 ```
 
+Cost centers with only 1 categorization.
+
+```{r}
+schedule_d1 %>%
+  distinct(costcenter_name_clean, categorization) %>%
+  count(costcenter_name_clean, sort = TRUE) %>%
+  filter(n == 1) %>%
+  select(costcenter_name_clean) %>%
+  left_join(schedule_d1) %>%
+  count(costcenter_name_clean, categorization)
+```
+
 Cost centers with more than 1 categorization.
 
 ```{r}
-costcenters_multiple <-
-  schedule_d1 %>%
-  distinct(costcenter, categorization) %>%
-  count(costcenter, sort = TRUE) %>%
-  filter(n > 1) %>%
+schedule_d1 %>%
   filter(costcenter != "10002") %>%
-  select(costcenter) %>%
-  left_join(schedule_d1) %>%
-  distinct(
-    categorization,
-    costcenter_name, program_2_name, program_name, title, name_clean,
-    costcenter, program_2, program, position, emplid
-  ) %>%
-  arrange(costcenter_name, program_2_name, program_name, title, categorization)
-
-costcenters_multiple %>% count(costcenter_name, categorization)
+  distinct(costcenter_name_clean, categorization) %>%
+  count(costcenter_name_clean, sort = TRUE) %>%
+  filter(n > 1)
 ```
